Some functionalities added